--- a/index.html
+++ b/index.html
@@ -4,64 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .logo {
-            white-space: pre;
-            font-family: monospace;
-            font-size: 16px;
-            text-align: center;
-        }
-        .projects {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-        }
-        .projects h2 {
-            margin-top: 0;
-        }
-        .projects ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .projects li {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="logo">
-        888    d8P                                 888b     d888         .d8888b.<br>
-        888   d8P                                  8888b   d8888        d88P  Y88b<br>
-        888  d8P                                   88888b.d88888        888    888<br>
-        888d88K     .d88b. 888  888 8888b. .d8888b 888Y88888P888 .d8888b888        8888b. 88888b. 88888b.<br>
-        8888888b   d88""88b888  888    "88b88K     888 Y888P 888d88P"   888           "88b888 "88b888 "88b<br>
-        888  Y88b  888  888Y88  88P.d888888"Y8888b.888  Y8P  888888     888    888.d888888888  888888  888<br>
-        888   Y88b Y88..88P Y8bd8P 888  888     X88888   "   888Y88b.   Y88b  d88P888  888888  888888  888<br>
-        888    Y88b "Y88P"   Y88P  "Y888888 88888P'888       888 "Y8888P "Y8888P" "Y888888888  888888  888
-    </div>
+    <div class="container">
+        <div class="logo">
+            888    d8P                                 888b     d888         .d8888b.                          
+            888   d8P                                  8888b   d8888        d88P  Y88b                         
+            888  d8P                                   88888b.d88888        888    888                         
+            888d88K     .d88b. 888  888 8888b. .d8888b 888Y88888P888 .d8888b888        8888b. 88888b. 88888b.  
+            8888888b   d88""88b888  888    "88b88K     888 Y888P 888d88P"   888           "88b888 "88b888 "88b 
+            888  Y88b  888  888Y88  88P.d888888"Y8888b.888  Y8P  888888     888    888.d888888888  888888  888 
+            888   Y88b Y88..88P Y8bd8P 888  888     X88888   "   888Y88b.   Y88b  d88P888  888888  888888  888 
+            888    Y88b "Y88P"   Y88P  "Y888888 88888P'888       888 "Y8888P "Y8888P" "Y888888888  888888  888 
+        </div>
 
-    <div class="projects">
-        <h2>Current Projects</h2>
-        <ul>
-            <li>Project 1</li>
-            <li>Project 2</li>
-            <li>Project 3</li>
-            <!-- Add more projects as needed -->
-        </ul>
+        <div class="projects">
+            <h2>Current Projects</h2>
+            <ul>
+                <li>Project 1</li>
+                <li>Project 2</li>
+                <li>Project 3</li>
+                <!-- Add more projects as needed -->
+            </ul>
+        </div>
     </div>
 </body>
 </html>
+
