--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Kovas McCann</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,9 +22,8 @@
         <div class="projects">
             <h2>Current Projects</h2>
             <ul>
-                <li>Project 1</li>
-                <li>Project 2</li>
-                <li>Project 3</li>
+                <li>FireFetch</li>
+                <li>StockSearch</li>
                 <!-- Add more projects as needed -->
             </ul>
         </div>
