--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         </div>
 
         <div class="projects">
+        <center>
             <h2>Current Projects</h2>
             <ul>
                 <li>FireFetch</li>
                 <li>StockSearch</li>
                 <!-- Add more projects as needed -->
             </ul>
+            </center>
         </div>
     </div>
 </body>
