Add new stuff and nice colors

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 888   Y88b Y88..88P Y8bd8P 888  888     X88888   "   888Y88b.   Y88b  d88P888  888888  888888  888 
 888    Y88b "Y88P"   Y88P  "Y888888 88888P'888       888 "Y8888P "Y8888P" "Y888888888  888888  888 
         </div>
+<noscript>
+    <p style="text-align: center; margin-bottom: 0px;"> 
+        JS disabled! keep it up! 
+    </p>
+</noscript>
 
     <center>
         <div class="projects">
@@ -32,5 +37,9 @@
         </center>
     </div>
 </body>
+<footer>
+    Kovas McCann <script>document.write(new Date().getFullYear())</script><br>
+    XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7
+</footer>
 </html>
 
