Will this work???

--- a/index.html
+++ b/index.html
@@ -36,10 +36,49 @@
         </div>
         </center>
     </div>
+!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kovas McCann</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="logo">
+888    d8P                                 888b     d888         .d8888b.                          
+888   d8P                                  8888b   d8888        d88P  Y88b                         
+888  d8P                                   88888b.d88888        888    888                         
+888d88K     .d88b. 888  888 8888b. .d8888b 888Y88888P888 .d8888b888        8888b. 88888b. 88888b.  
+8888888b   d88""88b888  888    "88b88K     888 Y888P 888d88P"   888           "88b888 "88b888 "88b 
+888  Y88b  888  888Y88  88P.d888888"Y8888b.888  Y8P  888888     888    888.d888888888  888888  888 
+888   Y88b Y88..88P Y8bd8P 888  888     X88888   "   888Y88b.   Y88b  d88P888  888888  888888  888 
+888    Y88b "Y88P"   Y88P  "Y888888 88888P'888       888 "Y8888P "Y8888P" "Y888888888  888888  888 
+        </div>
+<noscript>
+    <p style="text-align: center; margin-bottom: 0px;"> 
+        JS disabled! keep it up! 
+    </p>
+</noscript>
+
+    <center>
+        <div class="projects">
+            <h2>Current Projects</h2>
+            <ul>
+                <li>FireFetch</li>
+                <li>StockSearch</li>
+                <!-- Add more projects as needed -->
+            </ul>
+        </div>
+        </center>
+    </div>
 </body>
 <footer>
     Kovas McCann <script>document.write(new Date().getFullYear())</script><br>
     XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7
 </footer>
+</body>
 </html>
 
