--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     </p>
 </noscript>
 
+<center>
+<img src="Lock.png">
+</center>
+
 <!--
 <center>
         <div class="projects">
@@ -32,7 +36,6 @@
             <ul>
                 <li>FireFetch</li>
                 <li>StockSearch</li>
-                <!-- Add more projects as needed -->
             </ul>
         </div>
 </center>
@@ -42,6 +45,7 @@
 </div>
 </body>
 <footer>
+    <hr>
     Kovas McCann <script>document.write(new Date().getFullYear())</script><br>
     XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7
 </footer>
