--- a/ring.html
+++ b/ring.html
@@ -1,1 +1,1 @@
-<iframe src="https://0x19.org/lainring/opml.php" width="100%" height="600px" frameborder="0"></iframe>
+<object type="text/xml" data="https://0x19.org/lainring/opml.php" width="100%" height="600px"></object>
