added stock ticker

--- a/stonks.html
+++ b/stonks.html
@@ -29,8 +29,10 @@
     </style>
 </head>
 <body>
-    <div id="ticker-container" class="ticker"></div>
-    <div id="status" class="status"></div>
-    <script src="script.js"></script>
+    <center>
+        <div id="ticker-container" class="ticker"></div>
+        <div id="status" class="status"></div>
+        <script src="script.js"></script>
+    </center>
 </body>
 </html>
