--- a/index.html
+++ b/index.html
@@ -19,15 +19,22 @@
 888   Y88b Y88..88P Y8bd8P 888  888     X88888   "   888Y88b.   Y88b  d88P888  888888  888888  888 
 888    Y88b "Y88P"   Y88P  "Y888888 88888P'888       888 "Y8888P "Y8888P" "Y888888888  888888  888 
         </div>
+
+<!--
 <noscript>
     <p style="text-align: center; margin-bottom: 0px;"> 
         JS disabled! keep it up! 
     </p>
 </noscript>
+-->
 
 <center>
 <img src="Lock.png">
 </center>
+
+<hr>
+
+<iframe src="stonks.html" style="width:100%; height:350px; border:none;" scrolling="auto"></iframe>
 
 <!--
 <center>
