--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
 
 <hr>
 
-<iframe src="stonks.html" style="width:100%; height:350px; border:none;" scrolling="auto"></iframe>
+<div class="contact">
+    <h2>Contact</h2>
+    <form action="mailto:kovasmccann@firemail.cc" method="post" enctype="text/plain" class="contact-form">
+        <div class="form-group">
+            <input type="email" name="email" placeholder="Your Email" required>
+        </div>
+        <div class="form-group message-group">
+            <textarea name="message" rows="4" placeholder="Your Message" required></textarea>
+        </div>
+        <button type="submit">Send Message</button>
+    </form>
+</div>
 
 <!--
 <center>
