--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             margin: 0 auto;
         }
         .logo {
+            display: flex;
+            justify-content: center;
             white-space: pre;
             font-family: monospace;
             font-size: 16px;
