--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 </div>
                 <button type="submit">Send Message</button>
             </form>
+            <center>🔒 Ignore form insecure. 🔒</center>
         </div>
     </div>
 
