--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <footer>
         <hr>
         Kovas McCann <script>document.write(new Date().getFullYear())</script><br>
-        XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7
+        <!--XMR Address: 8BtCmvu4XDJUQcLRHe7vTEgXTL8oWj7kDaPq6Eq3DmCbDA1LS8TFMP5KFctzk6t1XoinFjV7Fxg2ZLxwbhd6taqZBwBt9r7-->
     </footer>
 </body>
 </html>
