--- a/old.html
+++ b/old.html
@@ -54,12 +54,11 @@
     <div id="ticker-container" class="ticker-container"></div>
 
     <script>
-        /*
         const tickers = [
             'AAPL', 'MSFT', 'AMZN', 'GOOGL', 'META', 'TSLA', 'NVDA', 'BRK.B', 'JPM', 'V',
             'MA', 'DIS', 'HD', 'PG', 'UNH', 'MRK', 'T', 'XOM', 'CVX', 'IBM'
-        ]; */
-        const tickers = [
+        ];
+        /*const tickers = [
             'AAPL', 'MSFT', 'AMZN', 'GOOGL', 'META', 'TSLA', 'NVDA', 'BRK.B', 'JPM', 'V',
             'MA', 'DIS', 'HD', 'PG', 'UNH', 'MRK', 'T', 'XOM', 'CVX', 'IBM',
             'CSCO', 'ORCL', 'INTU', 'WMT', 'PFE', 'KO', 'NKE', 'MCD', 'LLY', 'BMY',
@@ -70,7 +69,7 @@
             'ZTS', 'RBLX', 'ETN', 'KMB', 'NSC', 'ALL', 'UAL', 'CCI', 'CBRE', 'BABA',
             'ROG', 'TSN', 'MRO', 'KHC', 'EXC', 'ECL', 'PGR', 'NOC', 'DFS', 'PH',
             'BBY', 'LYB', 'MRVL', 'ALXN', 'MRNA'
-        ];
+        ];*/
         
         // Store previous prices to track changes
         const previousPrices = {};
