--- a/stonks.html
+++ b/stonks.html
@@ -3,36 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stock Ticker Display</title>
+    <title>Responsive Stock Ticker Display</title>
     <style>
+        /* Base Styles */
         body {
             font-family: Arial, sans-serif;
             background-color: black;
             color: white;
-            padding: 20px;
+            padding: 0;
             margin: 0;
-            overflow: hidden;
-        }
-        .ticker {
             display: flex;
-            flex-wrap: wrap;
-            font-size: 16px;
-            line-height: 1.5;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
+
+        /* Ticker Grid Layout */
+        .ticker-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+            gap: 10px;
+            padding: 10px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        /* Ticker Item Styles */
         .ticker-item {
-            width: 200px;
-            padding: 5px;
+            font-family: 'Courier New', Courier, monospace;
+            color: #00FF00;
+            background-color: #000000;
+            padding: 10px;
+            border-radius: 3px;
+            border: 1px solid #00FF00;
+            text-align: center;
+            transition: background-color 0.5s ease;
         }
-        .status {
-            margin-top: 20px;
-        }
+
+        /* Flash Animations */
+        .flash-up { animation: flashUp 0.5s; }
+        .flash-down { animation: flashDown 0.5s; }
+
+        /* Keyframes for Flash Animation */
+        @keyframes flashUp { 0% { background-color: #00ff00; } 100% { background-color: #000000; } }
+        @keyframes flashDown { 0% { background-color: #ff0000; } 100% { background-color: #000000; } }
     </style>
 </head>
 <body>
-    <center>
-        <div id="ticker-container" class="ticker"></div>
-        <div id="status" class="status"></div>
-        <script src="script.js"></script>
-    </center>
+    <div id="ticker-container" class="ticker-container"></div>
+
+    <script>
+        const previousPrices = {};
+
+        async function fetchTickers() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const tickers = urlParams.get('=') ? urlParams.get('=').split(',') : [];
+            return tickers;
+        }
+
+        async function populateTickers() {
+            const tickers = await fetchTickers();
+            const tickerContainer = document.getElementById('ticker-container');
+            tickers.forEach(ticker => {
+                const item = document.createElement('div');
+                item.className = 'ticker-item';
+                item.dataset.ticker = ticker;
+                item.textContent = `${ticker} - Loading...`;
+                tickerContainer.appendChild(item);
+            });
+
+            setInterval(() => grab(tickers), 2000);
+        }
+
+        async function grab(tickers) {
+            for (const singleticker of tickers) {
+                try {
+                    const response = await fetch(`https://generic709.herokuapp.com/stockc/${singleticker}`);
+                    const quote = await response.json();
+                    if (!quote || !quote.price) continue;
+
+                    const newPrice = parseFloat(quote.price).toFixed(2);
+                    const item = document.querySelector(`.ticker-item[data-ticker='${singleticker}']`);
+                    
+                    const oldPrice = previousPrices[singleticker];
+                    previousPrices[singleticker] = newPrice;
+
+                    if (oldPrice !== undefined) {
+                        item.classList.remove('flash-up', 'flash-down');
+                        if (newPrice > oldPrice) {
+                            item.classList.add('flash-up');
+                        } else if (newPrice < oldPrice) {
+                            item.classList.add('flash-down');
+                        }
+                        setTimeout(() => item.classList.remove('flash-up', 'flash-down'), 500);
+                    }
+
+                    item.innerHTML = `<span style="color: #FF00FF;">${singleticker}</span> - ${newPrice}`;
+                    
+                } catch (error) {
+                    console.error('Error fetching data:', error);
+                }
+            }
+        }
+
+        populateTickers();
+    </script>
 </body>
 </html>
