--- a/stonks.html
+++ b/stonks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Stock Ticker Display</title>
+    <title>Stock Ticker Display</title>
     <style>
         /* Base Styles */
         body {
