--- a/book.html
+++ b/book.html
@@ -3,17 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XMR-USDT Order Book</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <title>XMR-USDT Order Book - Hacker Theme</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Orbitron', sans-serif;
+            background-color: #1e1e1e;
+            color: #00ff00;
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+        h1, h3 {
+            text-align: center;
+            color: #00ff00;
+        }
+        .container {
+            padding: 20px;
+        }
+        table {
+            width: 100%;
+            margin: 20px 0;
+            border-collapse: collapse;
+            background-color: #222;
+            color: #00ff00;
+            border-radius: 10px;
+        }
+        th, td {
+            padding: 10px;
+            text-align: right;
+        }
+        th {
+            background-color: #333;
+            border-top: 1px solid #555;
+        }
+        td {
+            border-top: 1px solid #444;
+        }
+        td.price {
+            color: #ff0000;
+        }
+        td.amount {
+            color: #00ff00;
+        }
+        .metrics {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .metric-box {
+            padding: 20px;
+            background-color: #333;
+            border-radius: 10px;
+            border: 1px solid #444;
+            text-align: center;
+        }
+        .metric-box span {
+            display: block;
+            font-size: 24px;
+        }
+        .metric-box .label {
+            font-size: 14px;
+            color: #888;
+        }
+        canvas {
+            margin-top: 40px;
+            border: 1px solid #555;
+            border-radius: 10px;
+        }
+        .refresh-text {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
+            color: #888;
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">XMR-USDT Order Book</h1>
+        <h1>XMR-USDT Order Book</h1>
 
-        <!-- Table to Display Buy Orders -->
+        <!-- Metrics Section -->
+        <div class="metrics">
+            <div class="metric-box">
+                <span id="highestBuyPrice">Loading...</span>
+                <div class="label">Highest Buy Price</div>
+            </div>
+            <div class="metric-box">
+                <span id="lowestSellPrice">Loading...</span>
+                <div class="label">Lowest Sell Price</div>
+            </div>
+            <div class="metric-box">
+                <span id="totalBuyVolume">Loading...</span>
+                <div class="label">Total Buy Volume</div>
+            </div>
+            <div class="metric-box">
+                <span id="totalSellVolume">Loading...</span>
+                <div class="label">Total Sell Volume</div>
+            </div>
+        </div>
+
+        <!-- Buy Orders Table -->
         <h3>Buy Orders</h3>
-        <table class="table table-bordered" id="buyTable">
+        <table id="buyTable">
             <thead>
                 <tr>
                     <th>Price</th>
@@ -26,9 +121,9 @@
             </tbody>
         </table>
 
-        <!-- Table to Display Sell Orders -->
+        <!-- Sell Orders Table -->
         <h3>Sell Orders</h3>
-        <table class="table table-bordered" id="sellTable">
+        <table id="sellTable">
             <thead>
                 <tr>
                     <th>Price</th>
@@ -41,16 +136,37 @@
             </tbody>
         </table>
 
-        <!-- Chart for Order Book -->
+        <!-- Order Book Graph -->
         <h3>Order Book Graph</h3>
         <canvas id="orderBookChart" height="400"></canvas>
+
+        <div class="refresh-text">Refreshing every 10 seconds...</div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         const apiUrl = 'https://tradeogre.com/api/v1/orders/XMR-USDT';
         let buyData = [];
         let sellData = [];
+
+        // Load data from localStorage if available
+        function loadStoredData() {
+            const storedBuyData = localStorage.getItem('buyData');
+            const storedSellData = localStorage.getItem('sellData');
+
+            if (storedBuyData && storedSellData) {
+                buyData = JSON.parse(storedBuyData);
+                sellData = JSON.parse(storedSellData);
+                renderTables();
+                renderMetrics();
+                renderGraph();
+            }
+        }
+
+        // Store data in localStorage
+        function storeData() {
+            localStorage.setItem('buyData', JSON.stringify(buyData));
+            localStorage.setItem('sellData', JSON.stringify(sellData));
+        }
 
         // Fetch order book data from the API
         async function fetchOrderBook() {
@@ -59,20 +175,25 @@
                 const data = await response.json();
 
                 if (data.success) {
-                    // Update buy and sell data
+                    // Extract buy and sell data
                     buyData = Object.entries(data.buy).map(([price, amount]) => ({
                         price: parseFloat(price),
                         amount: parseFloat(amount),
                         total: parseFloat(price) * parseFloat(amount),
                     }));
+
                     sellData = Object.entries(data.sell).map(([price, amount]) => ({
                         price: parseFloat(price),
                         amount: parseFloat(amount),
                         total: parseFloat(price) * parseFloat(amount),
                     }));
 
-                    // Render the tables and graph
+                    // Store updated data
+                    storeData();
+
+                    // Render tables, metrics, and graph
                     renderTables();
+                    renderMetrics();
                     renderGraph();
                 } else {
                     console.error("Error fetching order book data.");
@@ -86,7 +207,7 @@
         function renderTables() {
             const buyTable = document.getElementById('buyTable').getElementsByTagName('tbody')[0];
             const sellTable = document.getElementById('sellTable').getElementsByTagName('tbody')[0];
-            
+
             // Clear previous rows
             buyTable.innerHTML = '';
             sellTable.innerHTML = '';
@@ -108,7 +229,21 @@
             });
         }
 
-        // Render the graph
+        // Render the additional metrics
+        function renderMetrics() {
+            const highestBuyPrice = Math.max(...buyData.map(order => order.price));
+            const lowestSellPrice = Math.min(...sellData.map(order => order.price));
+            const totalBuyVolume = buyData.reduce((sum, order) => sum + order.amount, 0);
+            const totalSellVolume = sellData.reduce((sum, order) => sum + order.amount, 0);
+
+            // Update metrics on the page
+            document.getElementById('highestBuyPrice').textContent = highestBuyPrice.toFixed(8);
+            document.getElementById('lowestSellPrice').textContent = lowestSellPrice.toFixed(8);
+            document.getElementById('totalBuyVolume').textContent = totalBuyVolume.toFixed(8);
+            document.getElementById('totalSellVolume').textContent = totalSellVolume.toFixed(8);
+        }
+
+        // Render the graph using Chart.js
         function renderGraph() {
             const ctx = document.getElementById('orderBookChart').getContext('2d');
             const buyPrices = buyData.map(order => order.price);
@@ -119,19 +254,19 @@
             new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: Array.from({ length: Math.max(buyData.length, sellData.length) }, (_, i) => i + 1),
+                    labels: Array.from({ length: buyPrices.length }, (_, i) => i + 1),
                     datasets: [
                         {
                             label: 'Buy Orders',
                             data: buyVolumes,
-                            borderColor: 'green',
+                            borderColor: '#00ff00',
                             backgroundColor: 'rgba(0, 255, 0, 0.3)',
                             fill: true,
                         },
                         {
                             label: 'Sell Orders',
                             data: sellVolumes,
-                            borderColor: 'red',
+                            borderColor: '#ff0000',
                             backgroundColor: 'rgba(255, 0, 0, 0.3)',
                             fill: true,
                         },
@@ -157,11 +292,15 @@
             });
         }
 
-        // Refresh the order book every 10 seconds
+        // Initial load
+        loadStoredData();
+
+        // Fetch the order book every 10 seconds
         setInterval(fetchOrderBook, 10000);
 
-        // Initial fetch
+        // First fetch
         fetchOrderBook();
     </script>
 </body>
 </html>
+
